--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,33 +1,33 @@
 <div class='row'>
-	<div class='span3'>
-		<div class="text-left" style="padding-top:10px">
-			<img src="assets/images/wyc.JPG" alt="photo" class="logo-image" width="200px"/>
+    <div class='span12'>
+		<div class='photo'> 
+			<img src="assets/images/wyc.JPG" alt="photo"/> 
 		</div>
-	</div>
-	<div class='span8'>
-		<h3>
-			Yunchao Wei 魏云超
-		</h3>
-		<p>
-		I am currently a Postdoc Researcher in Learning and Vision Research
-		Group at the Department of Electrical and Computer Engineering,
-		National University of Singapore, directed
-		by <a href="https://sites.google.com/site/jshfeng/">Jiashi Feng</a>
-		and <a href="https://www.ece.nus.edu.sg/stfpage/eleyans/">Shuicheng
-			Yan</a>. I received PhD from Beijing Jiaotong University, advised
-		by <a href="http://mepro.bjtu.edu.cn/zhaoyao/e_index.htm">Zhao
-			Yao</a>. My research areas are computer vision, multimedia and
-		deep learning. I am interested in multi-modal data analysis, multi-label classification, object detection and image semantic segmentation.
-		</p> 
-		<p>
-			<h3>Research</h3> computer vision, multimedia and deep learning </p>  
-		 
-		{% if site.email %}
-			 <a href="mailto: {{site.email}}"><i class="fa fa-envelope"></i> &nbsp; {{site.email}}</a> 
-		{% endif %}
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-		{% if site.website %}
-			 <a href="https://scholar.google.com.sg/citations?user=qL9Csv0AAAAJ&hl=en" target="_blank"><i class="fa fa-globe"></i> &nbsp; {{site.website}}</a> 
-		{% endif %}
-	</div>
+		<div class='introduction'>
+			<h3>
+				Yunchao Wei 魏云超
+			</h3>
+			<p>
+			I am currently a Postdoc Researcher in Learning and Vision Research
+			Group at the Department of Electrical and Computer Engineering,
+			National University of Singapore, directed
+			by <a href="https://sites.google.com/site/jshfeng/">Jiashi Feng</a>
+			and <a href="https://www.ece.nus.edu.sg/stfpage/eleyans/">Shuicheng
+				Yan</a>. I received PhD from Beijing Jiaotong University, advised
+			by <a href="http://mepro.bjtu.edu.cn/zhaoyao/e_index.htm">Zhao
+				Yao</a>. My research areas are computer vision, multimedia and
+			deep learning. I am interested in multi-modal data analysis, multi-label classification, object detection and image semantic segmentation.
+			</p> 
+			<p>
+				<h3>Research</h3> computer vision, multimedia and deep learning </p>  
+			 
+			{% if site.email %}
+				 <a href="mailto: {{site.email}}"><i class="fa fa-envelope"></i> &nbsp; {{site.email}}</a> 
+			{% endif %}
+			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+			{% if site.website %}
+				 <a href="https://scholar.google.com.sg/citations?user=qL9Csv0AAAAJ&hl=en" target="_blank"><i class="fa fa-globe"></i> &nbsp; {{site.website}}</a> 
+			{% endif %}
+		</div>
+		</div>
 </div>
