--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -11,7 +11,8 @@
 			 {% include introduction.html %}  
 		 <hr>
 			 {% include publications.html %}
-
+          <hr>
+		     {% include award.html %}
      </div><!--//main-body-->
 
 {% include footer.html %}
