--- a/_includes/award.html
+++ b/_includes/award.html
@@ -3,10 +3,11 @@
 </h3>
 <div class='award'>
 	<ul >
-		<li>2014 Excellent Graduate of Tsinghua University</li>
-		<li>2014 Excellent Graduation Thesis of Tsinghua University </li>
-		<li>2012 Excellent Doctoral Student Scholarship granted by Ministry of Education </li>
-		<li>2009 Excellent Graduate of Beijing</li>
-		<li>2009 Excellent Graduation Thesis of Tsinghua University </li> 
+		<li>2016 Excellent Doctoral Dissertation Award of
+		Beijing Jiaotong University</li>
+		<li>2014 National Scholarship </li>
+		<li>2014 The Winner Prize of Object Detection Task 1a
+		in ILSVRC </li>
+		<li>2013 Huawei Scholarship</li>
 	</ul>
 </div>
