--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -148,7 +148,7 @@
       <strong>Deep Learning with S-Shaped Rectified Linear Activation Units</strong><br />
        Xiaojie Jin, Chunyan Xu, Jiashi Feng, <strong>Yunchao Wei</strong>, Junjun Xiong, Shuicheng Yan<br />
        Proceedings of the AAAI Conference on Artificial Intelligence (AAAI), 2016 <br />
-      <a href="assets/pdf/https://arxiv.org/pdf/1512.07030v1.pdf">[PDF]</a>
+      <a href="https://arxiv.org/pdf/1512.07030v1.pdf">[PDF]</a>
     </p>
   </div>
 </div>
@@ -256,8 +256,6 @@
       <strong>Class-Driven Non-Negative Matrix Factorization for Image Representation</strong><br />
        Yanhui Xiao, Zhenfeng Zhu, Yao Zhao, <strong>Yunchao Wei</strong> <br />
        Journal of Computer Science and Technology  (JCST), 2014 <br />
-      <a href="assets/pdf/Cross-Modal Retrieval With CNN Visual Features A New Baseline.pdf">[PDF]</a>
-     <a href="assets/projects/projects.html">[Project]</a>
     </p>
   </div>
 </div>
@@ -269,8 +267,6 @@
       <strong>Knowledge Transferring for Image Classification</strong><br />
        <strong>Yunchao Wei</strong>, Yao Zhao, Zhenfeng Zhu, Yanhui Xiao<br />
        Intelligent Information Hiding and Multimedia Signal Processing (IIH-MSP), 2014 <br />
-      <a href="assets/pdf/Cross-Modal Retrieval With CNN Visual Features A New Baseline.pdf">[PDF]</a>
-     <a href="assets/projects/projects.html">[Project]</a>
     </p>
   </div>
 </div>
