--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -37,7 +37,8 @@
        <strong>Yunchao Wei</strong>, Xiaodan Liang, Yunpeng Chen, Xiaohui Shen, Ming-Ming Cheng, Jiashi Feng, Yao Zhao, Shuicheng Yan<br />
        IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2016 <br />
       <a href="assets/pdf/stc_tpami.pdf">[PDF]</a>
-      <a href="assets/projects/projects.html">[Project]</a>
+      <a href="assets/pdf/stc-supp.pdf">[SUPP]</a>
+      <a href="assets/projects/stc.html">[Project]</a>
     </p>
   </div>
 </div>
@@ -74,7 +75,8 @@
        <strong>Yunchao Wei</strong>, Wei Xia, Min Lin, Junshi Huang, Bingbing Ni, Jian Dong, Yao Zhao, Shuicheng Yan<br />
        IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2016 <br />
       <a href="assets/pdf/hcp_tpami.pdf">[PDF]</a>
-     <a href="assets/projects/projects.html">[Project]</a>
+      <a href="assets/pdf/hcp-supp.pdf">[SUPP]</a>
+     <a href="assets/projects/hcp.html">[Project]</a>
     </p>
   </div>
 </div>
