--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -149,7 +149,7 @@
     <p class="media-heading">
       <strong>Deep Learning with S-Shaped Rectified Linear Activation Units</strong><br />
        Xiaojie Jin, Chunyan Xu, Jiashi Feng, <strong>Yunchao Wei</strong>, Junjun Xiong, Shuicheng Yan<br />
-       Proceedings of the <strong>AAAI</strong> Conference on Artificial Intelligence (<strong>AAAI</strong>), 2016 <br />
+       Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2016 <br />
       <a href="https://arxiv.org/pdf/1512.07030v1.pdf">[PDF]</a>
     </p>
   </div>
@@ -229,7 +229,7 @@
     <p class="media-heading">
       <strong>Proximal Iteratively Reweighted Algorithm with Multiple Splitting for Nonconvex Sparsity Optimization</strong><br />
        Canyi Lu, <strong>Yunchao Wei</strong>, Zhouchen Lin, Shuicheng Yan  <br />
-       Proceedings of the <strong>AAAI</strong> Conference on Artificial Intelligence (<strong>AAAI</strong>), 2014 <br />
+       Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2014 <br />
       <a href="assets/pdf/piramsnso_aaai.pdf">[PDF]</a>
     </p>
   </div>
