--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -39,6 +39,7 @@
       <a href="assets/pdf/stc_tpami.pdf">[PDF]</a>
       <a href="assets/pdf/stc-supp.pdf">[SUPP]</a>
       <a href="assets/projects/stc.html">[Project]</a>
+      <a href="assets/bibtex/stc.txt">[Bibtex]</a>
     </p>
   </div>
 </div>
@@ -77,6 +78,7 @@
       <a href="assets/pdf/hcp_tpami.pdf">[PDF]</a>
       <a href="assets/pdf/hcp-supp.pdf">[SUPP]</a>
      <a href="assets/projects/hcp.html">[Project]</a>
+     <a href="assets/bibtex/hcp.txt">[Bibtex]</a>
     </p>
   </div>
 </div>
@@ -89,7 +91,8 @@
        <strong>Yunchao Wei</strong>, Yao Zhao, Canyi Lu, Shikui Wei, Luoqi Liu, Zhenfeng Zhu, Shuicheng Yan<br />
        IEEE Transactions on Cybernetics (<strong>TCYB</strong>), 2016 <br />
       <a href="assets/pdf/crcvf_tcyb.pdf">[PDF]</a>
-     <a href="assets/projects/projects.html">[Project]</a>
+     <a href="assets/projects/tcyb.html">[Project]</a>
+     <a href="assets/bibtex/tcyb.txt">[Bibtex]</a>
     </p>
   </div>
 </div>
@@ -114,7 +117,8 @@
        <strong>Yunchao Wei</strong>, Yao Zhao, Zhenfeng Zhu, Shikui Wei, Yanhui Xiao, Jiashi Feng, Shuicheng Yan<br />
        ACM Transactions on Intelligent Systems and Technology (<strong>TIST</strong>), 2016 <br />
       <a href="assets/pdf/mdcr_tist.pdf">[PDF]</a>
-     <a href="assets/projects/projects.html">[Project]</a>
+     <a href="assets/projects/tist.html">[Project]</a>
+     <a href="assets/bibtex/tist.txt">[Bibtex]</a>
     </p>
   </div>
 </div>
