--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -4,17 +4,18 @@
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 {% include head.html %}
 <body>
-    <div class="container"> 
-	    
+    <div class="container">
+
 		<div class="row">
-  
-			 {% include introduction.html %}  
+
+			 {% include introduction.html %}
 		 <hr>
 			 {% include publications.html %}
           <hr>
 		     {% include award.html %}
      </div><!--//main-body-->
-
+<script type="text/javascript"
+	src="//rc.revolvermaps.com/0/0/7.js?i=2p06zom66fa&amp;m=6&amp;c=ffc000&amp;cr1=ffffff&amp;sx=0" async="async"></script>
 {% include footer.html %}
 
 </body>
