--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -15,7 +15,7 @@
 		     {% include award.html %}
      </div><!--//main-body-->
 <script type="text/javascript"
-	src="//rc.revolvermaps.com/0/0/7.js?i=2p06zom66fa&amp;m=6&amp;c=ffc000&amp;cr1=ffffff&amp;sx=0" async="async"></script>
+	src="//rc.revolvermaps.com/0/0/7.js?i=2syexs9h0ea&amp;m=6&amp;c=ffc000&amp;cr1=ffffff&amp;br=3&amp;sx=0" async="async"></script>
 {% include footer.html %}
 
 </body>
