--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -14,9 +14,10 @@
           <hr>
 		     {% include award.html %}
      </div><!--//main-body-->
-<script type="text/javascript"
-	src="//rc.revolvermaps.com/0/0/7.js?i=2syexs9h0ea&amp;m=6&amp;c=ffc000&amp;cr1=ffffff&amp;br=3&amp;sx=0" async="async"></script>
+
 {% include footer.html %}
+<div style="display:inline-block;width:200px;"><script type="text/javascript"
+						       src="//rc.revolvermaps.com/0/0/7.js?i=2c0x15hj2fc&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;br=19&amp;sx=0" async="async"></script></div>
 
 </body>
 </html>
