--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -17,7 +17,6 @@
 
 {% include footer.html %}
 <div style="display:inline-block;width:200px;"><script type="text/javascript"
-						       src="//rc.revolvermaps.com/0/0/7.js?i=2c0x15hj2fc&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;br=19&amp;sx=0" async="async"></script></div>
-
+						       src="//rc.revolvermaps.com/0/0/7.js?i=2hlmeh3dic1&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;br=19&amp;sx=0" async="async"></script></div>
 </body>
 </html>
