--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,16 +5,6 @@
 <h4>
 	<a name='report'></a> Technique Reports
 </h4>
-<div class="media">
-
-  <div class="media-body">
-    <p class="media-heading">
-      <strong>Attentive Contexts for Object Detection</strong><br />
-       Jianan Li*, <strong>Yunchao Wei*</strong>, Xiaodan Liang, Jian Dong, Tingfa Xu, Jiashi Feng, Shuicheng Yan<br />
-      <a href="https://arxiv.org/abs/1603.07415">[arxiv]</a>
-    </p>
-  </div>
-</div>
 
 <div class="media">
   <div class="media-body">
@@ -27,15 +17,27 @@
 </div>
 
 <h4>
-	<a name='2016'></a> 2016
+	<a name='2017'></a> 2017
 </h4>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Attentive Contexts for Object Detection</strong><br />
+       Jianan Li*, <strong>Yunchao Wei*</strong>, Xiaodan Liang, Jian Dong, Tingfa Xu, Jiashi Feng, Shuicheng Yan<br />
+      IEEE Transactions on Multimedia (<strong>TMM</strong>, 2017)<br />
+      <a href="https://arxiv.org/abs/1603.07415">[PDF]</a>
+    </p>
+  </div>
+</div>
+
 <div class="media">
 
   <div class="media-body">
     <p class="media-heading">
       <strong>STC: A Simple to Complex Framework for Weakly-supervised Semantic Segmentation</strong><br />
        <strong>Yunchao Wei</strong>, Xiaodan Liang, Yunpeng Chen, Xiaohui Shen, Ming-Ming Cheng, Jiashi Feng, Yao Zhao, Shuicheng Yan<br />
-       IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2016 <br />
+       IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2017 <br />
       <a href="assets/pdf/stc_tpami.pdf">[PDF]</a>
       <a href="assets/pdf/stc-supp.pdf">[SUPP]</a>
       <a href="assets/projects/stc.html">[Project]</a>
@@ -43,6 +45,11 @@
     </p>
   </div>
 </div>
+
+<h4>
+	<a name='2016'></a> 2016
+</h4>
+
 
 <div class="media">
 
