--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -25,7 +25,7 @@
     <p class="media-heading">
       <strong>Attentive Contexts for Object Detection</strong><br />
        Jianan Li*, <strong>Yunchao Wei*</strong>, Xiaodan Liang, Jian Dong, Tingfa Xu, Jiashi Feng, Shuicheng Yan<br />
-      IEEE Transactions on Multimedia (<strong>TMM</strong>, 2017)<br />
+      IEEE Transactions on Multimedia (<strong>TMM</strong>), 2017<br />
       <a href="https://arxiv.org/abs/1603.07415">[PDF]</a>
     </p>
   </div>
