--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,7 +1,7 @@
 <div class='row'>
     <div class='span12'>
-		<div class='photo'> 
-			<img src="assets/images/wyc.JPG" alt="photo"/> 
+		<div class='photo'>
+			<img src="assets/images/wyc2.jpg" alt="photo"/>
 		</div>
 		<div class='introduction'>
 			<h3>
@@ -17,16 +17,16 @@
 			by <a href="http://mepro.bjtu.edu.cn/zhaoyao/e_index.htm">Zhao
 				Yao</a>. My research areas are computer vision, multimedia and
 			deep learning. I am interested in multi-modal data analysis, multi-label classification, object detection and image semantic segmentation.
-			</p> 
+			</p>
 			<p>
-				<h3>Research</h3> computer vision, multimedia and deep learning </p>  
-			 
+				<h3>Research</h3> computer vision, multimedia and deep learning </p>
+
 			{% if site.email %}
-				 <a href="mailto: {{site.email}}"><i class="fa fa-envelope"></i> &nbsp; {{site.email}}</a> 
+				 <a href="mailto: {{site.email}}"><i class="fa fa-envelope"></i> &nbsp; {{site.email}}</a>
 			{% endif %}
-			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 			{% if site.website %}
-				 <a href="https://scholar.google.com.sg/citations?user=qL9Csv0AAAAJ&hl=en" target="_blank"><i class="fa fa-globe"></i> &nbsp; {{site.website}}</a> 
+				 <a href="https://scholar.google.com.sg/citations?user=qL9Csv0AAAAJ&hl=en" target="_blank"><i class="fa fa-globe"></i> &nbsp; {{site.website}}</a>
 			{% endif %}
 		</div>
 		</div>
