--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -13,6 +13,8 @@
 			 {% include publications.html %}
           <hr>
 		     {% include award.html %}
+	  <hr>
+	             {% include resources.html %}
      </div><!--//main-body-->
 
 {% include footer.html %}
