--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -6,15 +6,16 @@
 <body>
     <div class="container">
 
-		<div class="row">
-
+		<div class="row"> 
 			 {% include introduction.html %}
 		 <hr>
+			 {% include news.html %}
+		 <hr>
 			 {% include publications.html %}
-          <hr>
+         <hr>
 		     {% include award.html %}
 	  <hr>
-	             {% include resources.html %}
+			 {% include resources.html %}
      </div><!--//main-body-->
 
 {% include footer.html %}
