--- a/_includes/news.html
+++ b/_includes/news.html
@@ -2,9 +2,7 @@
 	<a name='publications'></a> News
 </h3>
 <div class='news'>
-	<ul>   
-	    <li><i class="fa fa-flag"  color="#FF0000" aria-hidden="true"></i>Proposal-free network for instance-level object segmentation</li>
-		<li><i class="fa fa-flag"  color="#FF0000" aria-hidden="true"></i>Attentive Contexts for Object Detection</li>
-		<li><i class="fa fa-flag"  color="#FF0000" aria-hidden="true"></i>STC: A Simple to Complex Framework for Weakly-supervised Semantic Segmentation</li> 
+	<ul>
+	    <li><i class="fa fa-flag"  color="#FF0000" aria-hidden="true"></i></li>
 	</ul>
 </div>
