--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,6 +3,10 @@
 </h3>
 <div class='news'>
 	<ul>
-	    <li><i class="fa fa-flag"  color="#FF0000" aria-hidden="true"></i></li>
+	    <li><i class="fa fa-flag"  color="#FF0000"
+	    aria-hidden="true"></i>Three paper accepted in CVPR 2017
+	    with one oral and one spotlight.</li>
+	    <li><i class="fa fa-flag"  color="#FF0000"
+	    aria-hidden="true"></i>One paper accepted in ICME 2017.</li>
 	</ul>
 </div>
