--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -23,6 +23,41 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>Object Region Mining with Adversarial Erasing: A Simple
+       Classification to Semantic Segmentation Approach</strong><br />
+       <strong>Yunchao Wei</strong>, Jiashi Feng, Xiaodan Liang,
+      Ming-Ming Cheng, Yao Zhao, Shuicheng Yan<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2017 (<strong>oral</strong>)<br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Deep Self-taught Learning for Weakly Supervised Object Detection</strong><br />
+       Zequn Jie, <strong>Yunchao Wei</strong>, Xiaojie Jin, Jiashi
+       Feng, Wei Liu<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2017 (<strong>spotlight</strong>)<br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Perceptual Generative Adversarial Networks for Small
+       Object Detection</strong><br />
+       Jianan Li, Xiaodan Liang, <strong>Yunchao Wei</strong>, Tingfa
+       Xu, Jiashi Feng, Shuicheng Yan<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2017 <br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>Attentive Contexts for Object Detection</strong><br />
        Jianan Li*, <strong>Yunchao Wei*</strong>, Xiaodan Liang, Jian Dong, Tingfa Xu, Jiashi Feng, Shuicheng Yan<br />
       IEEE Transactions on Multimedia (<strong>TMM</strong>), 2017<br />
