--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -58,6 +58,18 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>Enhanced Isomorphic Semantic Representation for
+      Cross-media Retrieval</strong><br />
+       Ting Liu, Yao Zhao, Shikui Wei, Lixin Liao, <strong>Yunchao
+      Wei</strong><br />
+      IEEE International Conference on Multimedia and Expo (<strong>ICME</strong>), 2017 <br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>Attentive Contexts for Object Detection</strong><br />
        Jianan Li*, <strong>Yunchao Wei*</strong>, Xiaodan Liang, Jian Dong, Tingfa Xu, Jiashi Feng, Shuicheng Yan<br />
       IEEE Transactions on Multimedia (<strong>TMM</strong>), 2017<br />
