--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -28,7 +28,8 @@
        <strong>Yunchao Wei</strong>, Jiashi Feng, Xiaodan Liang,
       Ming-Ming Cheng, Yao Zhao, Shuicheng Yan<br />
       IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2017 (<strong>oral</strong>)<br />
-    </p>
+      <a href="assets/pdf/cvpr17_yc.pdf">[PDF]</a>
+   </p>
   </div>
 </div>
 
