--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -64,6 +64,7 @@
        Ting Liu, Yao Zhao, Shikui Wei, Lixin Liao, <strong>Yunchao
       Wei</strong><br />
       IEEE International Conference on Multimedia and Expo (<strong>ICME</strong>), 2017 <br />
+      <a href="assets/pdf/icme17.pdf">[PDF]</a>
     </p>
   </div>
 </div>
