--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -28,7 +28,7 @@
        <strong>Yunchao Wei</strong>, Jiashi Feng, Xiaodan Liang,
       Ming-Ming Cheng, Yao Zhao, Shuicheng Yan<br />
       IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2017 (<strong>oral</strong>)<br />
-      <a href="assets/pdf/cvpr17_yc.pdf">[PDF]</a>
+      <a href="https://arxiv.org/abs/1703.08448">[PDF]</a>
    </p>
   </div>
 </div>
@@ -39,7 +39,10 @@
       <strong>Deep Self-taught Learning for Weakly Supervised Object Detection</strong><br />
        Zequn Jie, <strong>Yunchao Wei</strong>, Xiaojie Jin, Jiashi
        Feng, Wei Liu<br />
-      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2017 (<strong>spotlight</strong>)<br />
+      IEEE Conference on Computer Vision and Pattern Recognition
+       (<strong>CVPR</strong>), 2017
+       (<strong>spotlight</strong>)<br />
+      <a href="https://arxiv.org/abs/1704.05188">[PDF]</a>
     </p>
   </div>
 </div>
