--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,7 @@
     <title>{{site.title}}</title>
     <!-- Meta -->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1"> 
     <meta name="description" content="Yunchao Wei's homepage">
     <link rel="shortcut icon" href="assets/images/log.png">
 
