--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,10 @@
-
+.container{ 
+  padding-left: 30px;
+  padding-right: 15px;
+  min-width: 1170px; 
+  margin-right:auto;
+  margin-left:auto;
+} 
 .logo-image { max-width:75%; height:auto; overflow:hidden;}
 
 .abstract-text { color: #606060; }
