--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -7,27 +7,32 @@
 			<h3>
 				Yunchao Wei 魏云超
 			</h3>
-			<p>
-			I am currently a Postdoc Researcher in Learning and Vision Research
-			Group at the Department of Electrical and Computer Engineering,
-			National University of Singapore, directed
-			by <a href="https://sites.google.com/site/jshfeng/">Jiashi Feng</a>
-			and <a href="https://www.ece.nus.edu.sg/stfpage/eleyans/">Shuicheng
-				Yan</a>. I received PhD from Beijing Jiaotong University, advised
-			by <a href="http://mepro.bjtu.edu.cn/zhaoyao/e_index.htm">Zhao
-				Yao</a>. My research areas are computer vision, multimedia and
-			deep learning. I am interested in multi-modal data analysis, multi-label classification, object detection and image semantic segmentation.
-			</p>
-			<p>
-				<h3>Research</h3> computer vision, multimedia and deep learning </p>
+			 
+			<h3>computer vision, multimedia and deep learning </h3>
 
+			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 			{% if site.email %}
-				 <a href="mailto: {{site.email}}"><i class="fa fa-envelope"></i> &nbsp; {{site.email}}</a>
+			 <p>	 <a href="mailto: {{site.email}}"><i class="fa fa-envelope"></i> &nbsp; {{site.email}}</a> </p>
 			{% endif %}
 			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 			{% if site.website %}
-				 <a href="https://scholar.google.com.sg/citations?user=qL9Csv0AAAAJ&hl=en" target="_blank"><i class="fa fa-globe"></i> &nbsp; {{site.website}}</a>
+			<p>	 <a href="https://scholar.google.com.sg/citations?user=qL9Csv0AAAAJ&hl=en" target="_blank"><i class="fa fa-globe"></i> &nbsp; {{site.website}}</a></p>
 			{% endif %}
 		</div>
-		</div>
+	</div>
+</div>
+<div class="row"> 
+<div class='span12'>
+	<p>
+	I am currently a Postdoc Researcher in Learning and Vision Research
+	Group at the Department of Electrical and Computer Engineering,
+	National University of Singapore, directed
+	by <a href="https://sites.google.com/site/jshfeng/">Jiashi Feng</a>
+	and <a href="https://www.ece.nus.edu.sg/stfpage/eleyans/">Shuicheng
+		Yan</a>. I received PhD from Beijing Jiaotong University, advised
+	by <a href="http://mepro.bjtu.edu.cn/zhaoyao/e_index.htm">Zhao
+		Yao</a>. My research areas are computer vision, multimedia and
+	deep learning. I am interested in multi-modal data analysis, multi-label classification, object detection and image semantic segmentation.
+	</p>
+	</div>
 </div>
