--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -23,7 +23,7 @@
 </div>
 <div class="row"> 
 <div class='span12'>
-	<p>
+	<p style="padding-top:20px">
 	I am currently a Postdoc Researcher in Learning and Vision Research
 	Group at the Department of Electrical and Computer Engineering,
 	National University of Singapore, directed
