--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,11 +9,11 @@
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css"> 
 	<link rel="stylesheet" href="assets/css/font-awesome/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="assets/css/main.css">
+    <script src="bootstrap/js/bootstrap.min.js"></script>  
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
