--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,10 +1,10 @@
 <div class='row'>
-    <div class='span3'>
+    <div class='col-xs-3'>
 		<div class='photo'>
 			<img src="assets/images/wyc2.jpg" alt="photo"/>
 		</div>
 	</div>
-	<div class='span8'> 
+	<div class='col-xs-8'> 
 			<h3>
 				Yunchao Wei 魏云超
 			</h3>
