--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -4,7 +4,7 @@
 			<img src="assets/images/wyc2.jpg" alt="photo"/>
 		</div>
 	</div>
-	<div class='col-xs-8'> 
+	<div class='col-xs-9'> 
 			<h3>
 				Yunchao Wei 魏云超
 			</h3>
@@ -19,13 +19,13 @@
 				Yao</a>. My research areas are computer vision, multimedia and
 			deep learning. I am interested in multi-modal data analysis, multi-label classification, object detection and image semantic segmentation.
 			</p>
-			<p>
-				<h3>Research</h3> computer vision, multimedia and deep learning </p>
+			
+			<h3>Research</h3> 
+			<p>computer vision, multimedia and deep learning </p>
 
 			{% if site.email %}
 				 <a href="mailto: {{site.email}}"><i class="fa fa-envelope"></i> &nbsp; {{site.email}}</a>
-			{% endif %}
-			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+			{% endif %} 
 			{% if site.website %}
 				 <a href="https://scholar.google.com.sg/citations?user=qL9Csv0AAAAJ&hl=en" target="_blank"><i class="fa fa-globe"></i> &nbsp; {{site.website}}</a>
 			{% endif %} 
