--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -54,7 +54,9 @@
        Object Detection</strong><br />
        Jianan Li, Xiaodan Liang, <strong>Yunchao Wei</strong>, Tingfa
        Xu, Jiashi Feng, Shuicheng Yan<br />
-      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2017 <br />
+      IEEE Conference on Computer Vision and Pattern Recognition
+       (<strong>CVPR</strong>), 2017 <br />
+      <a href="https://arxiv.org/abs/1706.05274">[PDF]</a>
     </p>
   </div>
 </div>
