--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -70,6 +70,7 @@
       Wei</strong><br />
       IEEE International Conference on Multimedia and Expo (<strong>ICME</strong>), 2017 <br />
       <a href="assets/pdf/icme17.pdf">[PDF]</a>
+      <a href="https://github.com/liutinglt/icme">[CODE]</a>
     </p>
   </div>
 </div>
