--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -20,6 +20,42 @@
 	<a name='2017'></a> 2017
 </h4>
 
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Regional Interactive Image Segmentation Networks</strong><br />
+      Jun Hao Liew, <strong>Yunchao Wei</strong>, Wei Xiong, Sim-Heng
+      Ong, Jiashi Feng<br />
+      IEEE International Conference on Computer Vision (<strong>ICCV</strong>), 2017 <br />
+   </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Magic-wall: Visualizing Room Decoration</strong><br />
+      Ting Liu, <strong>Yunchao Wei</strong>, Yao Zhao, Si Liu, Shikui
+      Wei<br />
+      ACM Multimedia (<strong>MM</strong>), 2017
+      (<strong>oral</strong>)<br />
+   </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Deep Attribute-preserving Metric Learning for Natural
+      Language Object Retrieval</strong><br />
+      Jianan Li, <strong>Yunchao Wei</strong>, Xiaodan Liang, Fang
+      Zhao, Tingfa Xu, Jiashi Feng<br />
+      ACM Multimedia (<strong>MM</strong>), 2017 <br />
+   </p>
+  </div>
+</div>
+
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
