--- a/_includes/news.html
+++ b/_includes/news.html
@@ -4,7 +4,13 @@
 <div class='news'>
 	<ul>
 	    <li><i class="fa fa-flag"  color="#FF0000"
-	    aria-hidden="true"></i>Three paper accepted in CVPR 2017
+	    aria-hidden="true"></i>NUS-Qihoo-UIUC_DPNs team won the
+	    2nd places in all four video-related tracks in ILSVRC 2017.</li>
+	    <li><i class="fa fa-flag"  color="#FF0000"
+	    aria-hidden="true"></i>Two papers accepted in ACM MM 2017
+	    and one paper accepted in ICCV 2017.</li>
+	    <li><i class="fa fa-flag"  color="#FF0000"
+	    aria-hidden="true"></i>Three papers accepted in CVPR 2017
 	    with one oral and one spotlight.</li>
 	    <li><i class="fa fa-flag"  color="#FF0000"
 	    aria-hidden="true"></i>One paper accepted in ICME 2017.</li>
