--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,4 +1,4 @@
-<div class='row'>
+﻿<div class='row'>
     <div class='col-xs-3'>
 		<div class='photo'>
 			<img src="assets/images/wyc2.jpg" alt="photo"/>
@@ -6,7 +6,7 @@
 	</div>
 	<div class='col-xs-8'> 
 			<h3>
-				Yunchao Wei 魏云超
+				Yunchao Wei
 			</h3>
 			<p>
 			I am currently a Postdoc Researcher in Learning and Vision Research
