--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -13,8 +13,7 @@
 			 My research areas are computer vision, multimedia and deep learning. I am interested in multi-modal data analysis, multi-label classification, object detection and image semantic segmentation.
 			</p>
 			 
-			<h3 style="padding-top:-5px">Research</h3> 
-			<p>computer vision, weakly supervised learning, multi-modal analysis</p>
+			<h3 style="padding-top:-5px"></h3> 
 
 			{% if site.email %}
 				 <a href="mailto: {{site.email}}"><i class="fa fa-envelope"></i> &nbsp; {{site.email}}</a>
