--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -7,6 +7,8 @@
     <div class="container">
 
 		<div class="row"> 
+		      {% include researchInt.html %}
+		 <hr>
 			 {% include introduction.html %}
 		 <hr>
 			 {% include news.html %}
