--- a/_includes/researchInt.html
+++ b/_includes/researchInt.html
@@ -3,13 +3,12 @@
 </h3>
 <div class='researchInt'>
   			<h3 style="padding-top:-5px">Research Interests</h3>
-			<p>My general research interest is to develop deep learning algorithms for
-challenging computer vision and multimedia problems. </p>
+			<p>My general research interest is to develop deep learning algorithms for challenging computer vision and multimedia problems. </p>
                         <p>Recently, I focus on:</p>
                         <ul style="list-style-type:disc">
-                        <li>Weakly supervised object detection and semantic segmentation</li>
-                        <li>Video analysis, including detection and tracking</li>
-                        <li>Multi-label classification</li>
-						<li>Multi-modal analysis</li>
+							<li>Weakly supervised object detection and semantic segmentation</li>
+							<li>Video analysis, including detection and tracking</li>
+							<li>Multi-label classification</li>
+							<li>Multi-modal analysis</li>
                         </ul>
 </div>
