--- a/_includes/researchInt.html
+++ b/_includes/researchInt.html
@@ -1,7 +1,4 @@
-﻿<h3>
-	<a name='researchInt'></a>
-</h3>
-<div class='researchInt'>
+﻿<div class='researchInt'>
   			<h3 style="padding-top:-5px">Research Interests</h3>
 			<p>My general research interest is to develop deep learning algorithms for challenging computer vision and multimedia problems. <br>
                         Recently, I focus on:</p>
