--- a/_includes/award.html
+++ b/_includes/award.html
@@ -1,7 +1,8 @@
-<h3>
-	<a name='publications'></a> Selected Award
-</h3>
+
 <div class='award'>
+	<h3>
+		Selected Award
+	</h3>
 	<ul >   <li>2016 Excellent Doctoral Dissertation Award of
 		CIE</li>
 		<li>2016 Excellent Doctoral Dissertation Award of
