--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,7 +1,6 @@
-<h3>
-	<a name='publications'></a> News
-</h3>
+
 <div class='news'>
+	<h3> News</h3>
 	<ul>
 	    <li><i class="fa fa-flag"  color="#FF0000"
 	    aria-hidden="true"></i>NUS-Qihoo-UIUC_DPNs team won the
