--- a/_includes/researchInt.html
+++ b/_includes/researchInt.html
@@ -1,5 +1,5 @@
 ﻿
-<!--<div class='researchInt'>-->
+<div class='researchInt'>
 <h3>Research Interests</h3>
 			<p>My general research interest is to develop deep learning algorithms for challenging computer vision and multimedia problems. <br>
                         Recently, I focus on:</p>
@@ -9,4 +9,4 @@
 							<li>Multi-label classification</li>
 							<li>Multi-modal analysis</li>
                         </ul>
-<!--</div>-->
+</div>
