--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,6 +9,36 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>Self-explanatory Deep Salient Object Detection</strong><br />
+       Huaxin Xiao, Jiashi Feng, <strong>Yunchao Wei</strong>, Maojun Zhang<br />
+      <a href="https://arxiv.org/abs/1708.05595">[arxiv]</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Towards Real World Human Parsing: Multiple-Human Parsing in the Wild</strong><br />
+       Jianshu Li, Jian Zhao, <strong>Yunchao Wei</strong>, Congyan Lang, Yidong Li, Jiashi Feng<br />
+      <a href="https://arxiv.org/pdf/1705.07206.pdf">[arxiv]</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>IAN: The Individual Aggregation Network for Person Search</strong><br />
+       Jimin Xiao, Yanchun Xie, Tammam Tillo, Kaizhu Huang, <strong>Yunchao Wei</strong>, Jiashi Feng<br />
+      <a href="https://arxiv.org/abs/1705.05552">[arxiv]</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>Proposal-free network for instance-level object segmentation</strong><br />
        Xiaodan Liang, <strong>Yunchao Wei</strong>, Xiaohui Shen, Jianchao Yang, Liang Lin, Shuicheng Yan<br />
       <a href="https://arxiv.org/abs/1509.02636">[arxiv]</a>
@@ -20,6 +50,15 @@
 	<a name='2017'></a> 2017
 </h4>
 
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Multi-stage Object Detection with Group Recursive Learning</strong><br />
+       Jianan Li, Xiaodan Liang, Jianshu Li, <strong>Yunchao Wei</strong>, Tingfa Xu, Jiashi Feng, Shuicheng Yan<br />
+      IEEE Transactions on Multimedia (<strong>TMM</strong>), 2017<br />
+    </p>
+  </div>
+</div>
 
 <div class="media">
   <div class="media-body">
