--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -36,11 +36,28 @@
   </div>
 </div>
 
+
+
+<h4>
+	<a name='2018'></a> 2017
+</h4>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Transferable Semi-supervised Semantic Segmentation</strong><br />
+       Huaxin Xiao, <strong>Yunchao Wei</strong>, Yu Liu, Maojun Zhang, Jiashi Feng<br />
+       Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2018 <br />
+    </p>
+  </div>
+</div>
+
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
       <strong>Proposal-free network for instance-level object segmentation</strong><br />
        Xiaodan Liang, <strong>Yunchao Wei</strong>, Xiaohui Shen, Jianchao Yang, Liang Lin, Shuicheng Yan<br />
+			 IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2018 <br />
       <a href="https://arxiv.org/abs/1509.02636">[arxiv]</a>
     </p>
   </div>
