--- a/_includes/researchInt.html
+++ b/_includes/researchInt.html
@@ -1,5 +1,4 @@
-﻿
-<div class='researchInt'>
+﻿<div class='researchInt'>
 <h3>Research Interests</h3>
 			<p>My general research interest is to develop deep learning algorithms for challenging computer vision and multimedia problems. <br>
                         Recently, I focus on:</p>
