--- a/_includes/researchInt.html
+++ b/_includes/researchInt.html
@@ -1,3 +1,7 @@
+<div class='recu'>
+<p><font color="red">Our group is currently looking for motivated PhD/Visiting students. If you would like to work with me, please send me your CV.</font></p>
+</div>
+
 ﻿<div class='researchInt'>
 <h3>Research Interests</h3>
 			<p>My general research interest is to develop deep learning algorithms for challenging computer vision and multimedia problems. <br>
