--- a/_includes/news.html
+++ b/_includes/news.html
@@ -2,6 +2,9 @@
 <div class='news'>
 	<h3> News</h3>
 	<ul>
+		  <li><i class="fa fa-flag"  color="#FF0000"
+		  aria-hidden="true"></i>Three papers accepted in CVPR 2018
+		  with one oral and one spotlight. One paper accepted by TMM.</li>
 	    <li><i class="fa fa-flag"  color="#FF0000"
 	    aria-hidden="true"></i>NUS-Qihoo-UIUC_DPNs team won the
 	    2nd places in all four video-related tracks in ILSVRC 2017.</li>
