--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,9 +9,9 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
-      <strong>Self-explanatory Deep Salient Object Detection</strong><br />
-       Huaxin Xiao, Jiashi Feng, <strong>Yunchao Wei</strong>, Maojun Zhang<br />
-      <a href="https://arxiv.org/abs/1708.05595">[arxiv]</a>
+      <strong>Revisiting RCNN: On Awakening the Classification Power of Faster RCNN</strong><br />
+       Bowen Cheng, <strong>Yunchao Wei</strong>, Honghui Shi, Rogerio Feris, Jinjun Xiong, Thomas Huang<br />
+      <a href="https://arxiv.org/abs/1803.06799">[arxiv]</a>
     </p>
   </div>
 </div>
@@ -41,6 +41,50 @@
 <h4>
 	<a name='2018'></a> 2018
 </h4>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Revisiting Dilated Convolution: A Simple Approach for Weakly- and SemiSupervised Semantic Segmentation</strong><br />
+       <strong>Yunchao Wei</strong>, Huaxin Xiao, Honghui Shi, Zequn Jie, Jiashi Feng, Thomas Huang<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2018 (<strong>spotlight</strong>)<br />
+      <a href="https://arxiv.org/abs/1804.00796">[PDF]</a>
+   </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Adversarial Complementary Learning for Weakly Supervised Object Localization</strong><br />
+       Xiaolin Zhang, <strong>*Yunchao Wei</strong>, Jiashi Feng, Yi Yang, Thomas Huang<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2018<br />
+      <a href="https://arxiv.org/abs/1804.00796">[PDF]</a>
+   </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Left-Right Comparative Recurrent Model for Stereo Matching</strong><br />
+       Zequn Jie, Pengfei Wang, Yonggen Ling, Bo Zhao, <strong>Yunchao Wei</strong>, Jiashi Feng, Wei Liu<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2018 (<strong>oral</strong>)<br />
+      <a href="https://arxiv.org/abs/1804.00796">[PDF]</a>
+   </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Deep Salient Object Detection with Dense Connections and Distraction Diagnosis</strong><br />
+       Huaxin Xiao, Jiashi Feng, <strong>Yunchao Wei</strong>, Maojun Zhang<br />
+			 IEEE Transactions on Multimedia (<strong>TMM</strong>), 2018<br />
+      <a href="https://arxiv.org/abs/1708.05595">[arxiv]</a>
+    </p>
+  </div>
+</div>
 
 <div class="media">
   <div class="media-body">
