--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -91,7 +91,7 @@
       <strong>Deep Salient Object Detection with Dense Connections and Distraction Diagnosis</strong><br />
        Huaxin Xiao, Jiashi Feng, <strong>Yunchao Wei</strong>, Maojun Zhang<br />
 			 IEEE Transactions on Multimedia (<strong>TMM</strong>), 2018<br />
-      <a href="https://arxiv.org/abs/1708.05595">[arxiv]</a>
+      <a href="https://arxiv.org/abs/1708.05595">[PDF]</a>
     </p>
   </div>
 </div>
@@ -102,6 +102,7 @@
       <strong>Transferable Semi-supervised Semantic Segmentation</strong><br />
        Huaxin Xiao, <strong>Yunchao Wei</strong>, Yu Liu, Maojun Zhang, Jiashi Feng<br />
        Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2018 <br />
+			 <a href="https://arxiv.org/abs/1711.06828">[PDF]</a>
     </p>
   </div>
 </div>
