--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,6 +3,11 @@
 	<h3> News</h3>
 	<ul>
 		  <li><i class="fa fa-flag"  color="#FF0000"
+		  aria-hidden="true"></i>Three papers accepted in ECCV 2018.</li>
+			<li><i class="fa fa-flag"  color="#FF0000"
+			aria-hidden="true"></i>BJTU-UIUC team won the
+	    1st places in all three human parsing tracks in the 2n LIP Challenge.</li>
+		  <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>Three papers accepted in CVPR 2018
 		  with one oral and one spotlight. One paper accepted by TMM.</li>
 	    <li><i class="fa fa-flag"  color="#FF0000"
