--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -19,16 +19,6 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
-      <strong>Revisiting RCNN: On Awakening the Classification Power of Faster RCNN</strong><br />
-       Bowen Cheng, <strong>Yunchao Wei</strong>, Honghui Shi, Rogerio Feris, Jinjun Xiong, Thomas Huang<br />
-      <a href="https://arxiv.org/abs/1803.06799">[arxiv]</a>
-    </p>
-  </div>
-</div>
-
-<div class="media">
-  <div class="media-body">
-    <p class="media-heading">
       <strong>Towards Real World Human Parsing: Multiple-Human Parsing in the Wild</strong><br />
        Jianshu Li, Jian Zhao, <strong>Yunchao Wei</strong>, Congyan Lang, Yidong Li, Jiashi Feng<br />
       <a href="https://arxiv.org/pdf/1705.07206.pdf">[arxiv]</a>
@@ -51,6 +41,37 @@
 <h4>
 	<a name='2018'></a> 2018
 </h4>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>TS2C: Tight Box Mining with Surrounding Segmentation Context for Weakly Supervised Object Detection</strong><br />
+       <strong>Yunchao Wei</strong>, Zhiqiang Shen, Bowen Cheng, Honghui Shi, Jinjun Xiong, Jiashi Feng, Thomas Huang<br />
+			 European Conference on Computer Vision (<strong>ECCV</strong>), 2018
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Self-produced Guidance for Weakly-supervised Object Localization</strong><br />
+       Xiaolin Zhang, <strong>Yunchao Wei</strong>, Guoliang Kang, Yi Yang, Thomas Huang<br />
+			 European Conference on Computer Vision (<strong>ECCV</strong>), 2018
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Revisiting RCNN: On Awakening the Classification Power of Faster RCNN</strong><br />
+       Bowen Cheng, <strong>Yunchao Wei</strong>, Honghui Shi, Rogerio Feris, Jinjun Xiong, Thomas Huang<br />
+			 European Conference on Computer Vision (<strong>ECCV</strong>), 2018
+      <a href="https://arxiv.org/abs/1803.06799">[PDF]</a>
+    </p>
+  </div>
+</div>
 
 <div class="media">
   <div class="media-body">
