--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -47,7 +47,8 @@
     <p class="media-heading">
       <strong>TS2C: Tight Box Mining with Surrounding Segmentation Context for Weakly Supervised Object Detection</strong><br />
        <strong>Yunchao Wei</strong>, Zhiqiang Shen, Bowen Cheng, Honghui Shi, Jinjun Xiong, Jiashi Feng, Thomas Huang<br />
-			 European Conference on Computer Vision (<strong>ECCV</strong>), 2018
+			 European Conference on Computer Vision (<strong>ECCV</strong>), 2018 <br />
+			 <a href="https://arxiv.org/abs/1807.04897">[PDF]</a>
     </p>
   </div>
 </div>
@@ -67,7 +68,7 @@
     <p class="media-heading">
       <strong>Revisiting RCNN: On Awakening the Classification Power of Faster RCNN</strong><br />
        Bowen Cheng, <strong>Yunchao Wei</strong>, Honghui Shi, Rogerio Feris, Jinjun Xiong, Thomas Huang<br />
-			 European Conference on Computer Vision (<strong>ECCV</strong>), 2018
+			 European Conference on Computer Vision (<strong>ECCV</strong>), 2018 <br />
       <a href="https://arxiv.org/abs/1803.06799">[PDF]</a>
     </p>
   </div>
