--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -45,6 +45,16 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>Self-Erasing Network for Integral Object Attention</strong><br />
+       Qibin Hou, Peng-Tao Jiang, <strong>Yunchao Wei</strong>, Ming-Ming Cheng<br />
+			 Neural Information Processing Systems (<strong>NIPS</strong>), 2018 <br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>TS2C: Tight Box Mining with Surrounding Segmentation Context for Weakly Supervised Object Detection</strong><br />
        <strong>Yunchao Wei</strong>, Zhiqiang Shen, Bowen Cheng, Honghui Shi, Jinjun Xiong, Jiashi Feng, Thomas Huang<br />
 			 European Conference on Computer Vision (<strong>ECCV</strong>), 2018 <br />
