--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,6 +9,39 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>Devil in the Details: Towards Accurate Single and Multiple Human Parsing</strong><br />
+      Ting Liu, Tao Ruan, Zilong Huang, <strong>Yunchao Wei</strong>, Shikui Wei, Yao Zhao, Thomas Huang<br />
+      <a href="https://arxiv.org/pdf/1809.05996">[arxiv]</a>
+			<a href="https://github.com/liutinglt/CE2P">[CODE]</a><br />
+			<strong>Note:</strong><h1 style="color:#FF0000;">This work achieves the 1st places on all human paring tracks in the 2nd LIP Challenge</h1>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>SG-One: Similarity Guidance Network for One-Shot Semantic Segmentation</strong><br />
+      Xiaolin Zhang, <strong>Yunchao Wei</strong>, Yi Yang, Thomas Huang<br />
+      <a href="https://arxiv.org/pdf/1810.09091">[arxiv]</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Decoupled Classification Refinement: Hard False Positive Suppression for Object Detection</strong><br />
+      Bowen Cheng, <strong>Yunchao Wei</strong>, Honghui Shi, Rogerio Feris, Jinjun Xiong, Thomas Huang<br />
+      <a href="https://arxiv.org/abs/1810.04002">[arxiv]</a>
+			<a href="https://github.com/bowenc0221/Decoupled-Classification-Refinement">[CODE]</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>Horizontal Pyramid Matching for Person Re-identification</strong><br />
       Yang Fu, <strong>Yunchao Wei</strong>, Yuqian Zhou, Honghui Shi, Gao Huang, Xinchao Wang, Zhiqiang Yao, Thomas Huang<br />
       <a href="https://arxiv.org/abs/1804.05275">[arxiv]</a>
@@ -48,6 +81,8 @@
       <strong>Self-Erasing Network for Integral Object Attention</strong><br />
        Qibin Hou, Peng-Tao Jiang, <strong>Yunchao Wei</strong>, Ming-Ming Cheng<br />
 			 Neural Information Processing Systems (<strong>NIPS</strong>), 2018 <br />
+			 <a href="https://arxiv.org/abs/1810.09821">[PDF]</a>
+			 <a href="http://mmcheng.net/SeeNet/">[Project]</a>
     </p>
   </div>
 </div>
@@ -69,6 +104,8 @@
       <strong>Self-produced Guidance for Weakly-supervised Object Localization</strong><br />
        Xiaolin Zhang, <strong>Yunchao Wei</strong>, Guoliang Kang, Yi Yang, Thomas Huang<br />
 			 European Conference on Computer Vision (<strong>ECCV</strong>), 2018
+			 <a href="https://arxiv.org/abs/1807.08902">[PDF]</a>
+			 <a href="https://github.com/xiaomengyc/SPG">[CODE]</a>
     </p>
   </div>
 </div>
@@ -102,6 +139,7 @@
        Xiaolin Zhang, <strong>*Yunchao Wei</strong>, Jiashi Feng, Yi Yang, Thomas Huang<br />
       IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2018<br />
 			<a href="https://arxiv.org/abs/1804.06962">[PDF]</a>
+			<a href="https://github.com/xiaomengyc/ACoL">[CODE]</a>
    </p>
   </div>
 </div>
