--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,18 +9,6 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
-      <strong>Devil in the Details: Towards Accurate Single and Multiple Human Parsing</strong><br />
-      Ting Liu, Tao Ruan, Zilong Huang, <strong>Yunchao Wei</strong>, Shikui Wei, Yao Zhao, Thomas Huang<br />
-      <a href="https://arxiv.org/pdf/1809.05996">[arxiv]</a>
-			<a href="https://github.com/liutinglt/CE2P">[CODE]</a><br />
-			<strong>Note:</strong><a style="color:#FF0000;">This work achieves the 1st places on all human paring tracks in the 2nd LIP Challenge</a>
-    </p>
-  </div>
-</div>
-
-<div class="media">
-  <div class="media-body">
-    <p class="media-heading">
       <strong>SG-One: Similarity Guidance Network for One-Shot Semantic Segmentation</strong><br />
       Xiaolin Zhang, <strong>Yunchao Wei</strong>, Yi Yang, Thomas Huang<br />
       <a href="https://arxiv.org/pdf/1810.09091">[arxiv]</a>
@@ -42,9 +30,28 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
-      <strong>Horizontal Pyramid Matching for Person Re-identification</strong><br />
-      Yang Fu, <strong>Yunchao Wei</strong>, Yuqian Zhou, Honghui Shi, Gao Huang, Xinchao Wang, Zhiqiang Yao, Thomas Huang<br />
-      <a href="https://arxiv.org/abs/1804.05275">[arxiv]</a>
+      <strong>Towards Real World Human Parsing: Multiple-Human Parsing in the Wild</strong><br />
+       Jianshu Li, Jian Zhao, <strong>Yunchao Wei</strong>, Congyan Lang, Yidong Li, Jiashi Feng<br />
+      <a href="https://arxiv.org/pdf/1705.07206.pdf">[arxiv]</a>
+    </p>
+  </div>
+</div>
+
+
+
+<h4>
+	<a name='2019'></a> 2019
+</h4>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Devil in the Details: Towards Accurate Single and Multiple Human Parsing</strong><br />
+      Ting Liu, Tao Ruan, Zilong Huang, <strong>Yunchao Wei</strong>, Shikui Wei, Yao Zhao, Thomas Huang<br />
+			Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2019 <br />
+      <a href="https://arxiv.org/pdf/1809.05996">[arxiv]</a>
+			<a href="https://github.com/liutinglt/CE2P">[CODE]</a><br />
+			<strong>Note:</strong><a style="color:#FF0000;">This work achieves the 1st places on all human paring tracks in the 2nd LIP Challenge</a>
     </p>
   </div>
 </div>
@@ -52,9 +59,30 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
-      <strong>Towards Real World Human Parsing: Multiple-Human Parsing in the Wild</strong><br />
-       Jianshu Li, Jian Zhao, <strong>Yunchao Wei</strong>, Congyan Lang, Yidong Li, Jiashi Feng<br />
-      <a href="https://arxiv.org/pdf/1705.07206.pdf">[arxiv]</a>
+      <strong>Weakly Supervised Scene Parsing with Point-based Distance Metric Learning</strong><br />
+      Rui Qian, <strong>Yunchao Wei</strong>, Honghui Shi, Jiachen Li, Jiaying Liu, Thomas Huang<br />
+			Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2019 <br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>STA: Spatial-Temporal Attention for Large-Scale Video-based Person Re-Identification</strong><br />
+      Yang Fu, Xiaoyang Wang, <strong>Yunchao Wei</strong>, Thomas Huang<br />
+      Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2019 <br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Horizontal Pyramid Matching for Person Re-identification</strong><br />
+      Yang Fu, <strong>Yunchao Wei</strong>, Yuqian Zhou, Honghui Shi, Gao Huang, Xinchao Wang, Zhiqiang Yao, Thomas Huang<br />
+			Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2019 <br />
+      <a href="https://arxiv.org/abs/1804.05275">[PDF]</a>
     </p>
   </div>
 </div>
@@ -64,12 +92,11 @@
     <p class="media-heading">
       <strong>IAN: The Individual Aggregation Network for Person Search</strong><br />
        Jimin Xiao, Yanchun Xie, Tammam Tillo, Kaizhu Huang, <strong>Yunchao Wei</strong>, Jiashi Feng<br />
-      <a href="https://arxiv.org/abs/1705.05552">[arxiv]</a>
+			 Pattern Recognition (<strong>PR</strong>), 2019 <br />
+      <a href="https://arxiv.org/abs/1705.05552">[PDF]</a>
     </p>
   </div>
 </div>
-
-
 
 <h4>
 	<a name='2018'></a> 2018
