--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,6 +3,8 @@
 	<h3> News</h3>
 	<ul>
 		  <li><i class="fa fa-flag"  color="#FF0000"
+		  aria-hidden="true"></i>Four papers accepted in AAAI 2019 and one paper accepted by PR.</li>
+			<li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>One paper accepted in NIPS 2018.</li>
 		  <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>Three papers accepted in ECCV 2018.</li>
